# just-server-vpn-proxy

./: Cargo.toml  README.md  postman-tests.md
Client/: index.html  package-lock.json  package.json  vite.config.js
Client/proxy-extension/: create-icons.sh  package-lock.json  package.json  vite.config.js
Client/proxy-extension/public/: manifest.json  rules.json
Client/proxy-extension/src/: App.css
Client/public/: background.js
Client/src/: App.jsx
Client/src/components/: ProxyToggle.jsx
src/: main.rs  pqc.rs
